[package]
name = "fib"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = { version = "0.15.6", features = ["matrixmultiply-threading"] }
rayon = "1.10.0"
rug = { version = "1.25.0", default-features = false, features = ["integer", "std", "float"] }

[profile.release]
codegen-units = 1
lto = "thin"
